--- a/app/components/PopularCarCard/PopularCarCard.module.css
+++ b/app/components/PopularCarCard/PopularCarCard.module.css
@@ -5,7 +5,7 @@
 .popularCarCard {
     display: flex;
     height: 290px;
-    width: 754px;
+    width: 796px;
     border: 1px solid #d9d9d9;
     margin-right: 22px;
 }
@@ -13,6 +13,7 @@
 .popularCarCardInfo {
     padding: 20px 40px;
     width: 394px;
+    margin-top: -30px;
 }
 
 .popularCarCardInfoHeading {
@@ -20,6 +21,7 @@
     font-weight: 500;
     line-height: 42px;
     cursor: default;
+    margin-bottom: 10px;
 }
 
 .popularCarCardInfoPara {
@@ -34,7 +36,8 @@
 .popularCarUl {
     list-style: none;
     display: flex;
-    margin-top: 52px
+    margin-top: 35px; 
+    margin-left: -40px;
 }
 
 .popularcarLi {
